codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_setup_popup_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: status_line_popup_snapshot(&mut chat)
---
  配 置 状 态 栏
  选 择 要 在 状 态 栏 中 显 示 的 项 目 。

  输 入 以 搜 索
  >
› [x] 使 用 主 题 颜 色          应 用 当 前  /theme 的 颜 色
  ───────────────────────
  [x] monthly-limit        Remaining usage on the monthly usage limit (omitted when unavailable)
  [x] weekly-limit         Remaining usage on the weekly usage limit (omitted when unavailable)
  [ ] 模 型                  当 前 模 型 名 称
  [ ] 模 型 与 推 理 强 度        当 前 模 型 名 称 和 推 理 强 度
  [ ] 推 理 强 度              当 前 推 理 强 度
  [ ] 当 前 目 录              当 前 工 作 目 录

  monthly 剩 余  65% · weekly 剩 余  50%
  按  space 切 换 ; ←/→ 移 动 ; enter 确 认 并 关 闭 ; esc 关 闭
