codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_surface_previews_rate_limits.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: snapshot
---
status line: monthly 剩余 65% · weekly 剩余 50%
terminal title: monthly 剩余 65% | weekly 剩余 50%
