codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_setup_popup_live_only.snap
---
source: tui/src/chatwidget/tests/status_surface_previews.rs
expression: terminal_title_popup_snapshot(&mut chat)
---
  配 置 终 端 标 题
  选 择 要 在 终 端 标 题 中 显 示 的 项 目 。

  输 入 以 搜 索
  >
› [x] 项 目       项 目 名 称 （ 回 退 为 当 前 目 录 名 称 ）
  [x] 会 话 标 题   当 前 会 话 标 题 ； 未 命 名 时 显 示 会 话 标 识 符
  [x] Git 分 支   当 前  Git 分 支 （ 不 可 用 时 省 略 ）
  [x] 任 务 进 度   update_plan 的 最 新 任 务 进 度 （ 可 用 前 省 略 ）
  [ ] 应 用 名 称   Codex 应 用 名 称
  [ ] 当 前 目 录   当 前 工 作 目 录
  [ ] 活 动 状 态   工 作 时 显 示 旋 转 指 示 器 ， 受 阻 时 显 示 需 要 操 作 的 消 息 。
  [ ] 运 行 状 态   简 洁 的 会 话 运 行 状 态 （ 就 绪 、 工 作 中 、 思 考 中 ）

  preview-live-root | Live preview thread | feature/live-preview-branch | 任 务  2/5
  按  space 切 换 ; ←/→ 移 动 ; enter 确 认 并 关 闭 ; esc 关 闭
